Name:                python-type-inference
Version:             0.1
Synopsis:            Type inference for Python 3.
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Levin Fritz
Maintainer:          levin.fritz@gmail.com
-- Copyright:           
Category:            Development
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Language.Python.TypeInference.Analysis.Analysis,
                       Language.Python.TypeInference.Analysis.MapLattice,
                       Language.Python.TypeInference.Analysis.TFMonad,
                       Language.Python.TypeInference.Analysis.TypeLattice,
                       Language.Python.TypeInference.CFG.CFG,
                       Language.Python.TypeInference.CFG.Fragment,
                       Language.Python.TypeInference.CFG.ToCFG,
                       Language.Python.TypeInference.CFG.ToFragment,
                       Language.Python.TypeInference.Common,
                       Language.Python.TypeInference.Configuration,
                       Language.Python.TypeInference.Error,
                       Language.Python.TypeInference.Parse,
                       Language.Python.TypeInference.TypeInference,
                       Language.Python.TypeInference.UserSuppliedTypes
  Hs-source-dirs:      src
  Build-depends:       base >= 3,
                       mtl,
                       containers == 0.3.0.0,
                       regex-compat,
                       deepseq >= 1,
                       language-python >= 0.3,
                       data-flow-analysis >= 0.1

